--- a/MRApi/appsettings.json
+++ b/MRApi/appsettings.json
@@ -40,7 +40,7 @@
     "RefreshTokenExpirationMin": 60
   },
   "Cookie": {
-    "Name": "app.mrsolution.com.np",
+    "Name": "app.solution.com.np",
     "IdleMinutes": 60
   }
 }
